--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,164 @@
-.container{
-  
+/* FONT FAMILY */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;900&display=swap");
+/*
+=============== 
+Global Styles/ Reset
+===============
+*/
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body,
+h1,
+h2,
+h3,
+h4 p,
+figure,
+picture {
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  text-transform: capitalize;
+  font-weight: 400;
+}
+
+a,
+li {
+  text-decoration: none;
+  list-style: none;
+}
+
+body {
+  line-height: 1.5;
+  min-height: 100vh;
+  font-family: "Roboto", sans-serif;
+
+  grid-template-rows: -webkit-min-content 1fr;
+  grid-template-rows: min-content 1fr;
+  overflow-x: hidden;
+}
+
+/* imgs easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* form elements easier to work with */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* remove animation for people who turned them off */
+@media (prefers-reduced-motion: reduce) {
+
+  *,
+  *::before,
+  *::after {
+    -webkit-animation-duration: 0.01ms !important;
+    animation-duration: 0.01ms !important;
+    -webkit-animation-iteration-count: 1 !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01sms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+/* =========
+utility clases 
+=========== */
+.hidden {
+  display: none;
+}
+
+.inline {
+  display: inline-block;
+}
+
+.flex {
+  display: flex;
+  gap: var(--gap, 1rem);
+}
+
+.grid {
+  display: grid;
+  gap: var(--gap, 1rem);
+}
+
+.d-block {
+  display: block;
+}
+
+/* header */
+.logo {
+  margin: clamp(1.5rem, 5vw, 2rem);
+}
+
+.primary-header {
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 768px) {
+  .flex {
+    flex-wrap: wrap;
+  }
+}
+
+/* SPACING .flow */
+/* Seclect all the elements of a divider except the first Child */
+/* It is use to make the top and botton line heights and borders the same */
+/* Where is a way to group things, is lower on specificy so we dont overwrite things*/
+.flow>*:where(:not(:first-child)) {
+  margin-top: var(--flow-space, 1rem);
+  /* outline: 1px solid red; */
+}
+
+.container {
+  padding-inline: 0rem;
+  margin-inline: auto;
+  max-width: 1200px;
+}
+
+/* for the visually impaired -Hide Contten- */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  /* added line */
+  border: 0;
+}
+
+/* -----------
+TIC-TAC-TOE
+--------------- */
+.container {
+  display: grid;
+  place-items: center;
+}
+
+.board-container {
+
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -8,13 +167,66 @@
   max-width: 300px;
   place-items: center;
 }
-.box{
+
+.box {
   width: 100px;
   height: 100px;
   border: 1px solid grey;
   text-align: center;
   font-size: 2rem;
 }
-.banish{
+
+.banish {
   display: none;
+}
+
+/* ----------
+Names
+------------ */
+.title {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.input-fields {
+  display: flex;
+  gap: 1rem
+}
+
+.names {
+  border-bottom: 1px solid grey;
+  padding-bottom: 2rem;
+}
+
+.form {
+  padding-block: 0.1rem;
+  padding-inline: 1rem;
+}
+
+.form img {
+  display: inline;
+  padding-right: 0.5rem;
+}
+
+.btns {
+  margin-top: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+
+.btns>*:hover {
+  cursor: pointer;
+}
+
+/* ------------
+game over display
+-------------- */
+.game-over {
+  box-shadow: -1px 0px 5px 6px rgba(0, 0, 0, 0.36);
+  max-width: 18rem;
+  text-align: center;
+  border-radius: 10px;
+  padding: 2rem;
+  position: absolute;
 }
