--- a/styles.css
+++ b/styles.css
@@ -248,6 +248,11 @@ Names
     left: 50%;
     transform: translate(-50%, 20%);
   }
+
+  .box {
+    display: grid;
+    place-items: center;
+  }
 }
 
 @media screen and (min-width: 800px) {
