correct errors that were appearing in console

--- a/styles.css
+++ b/styles.css
@@ -153,8 +153,9 @@ utility clases
 TIC-TAC-TOE
 --------------- */
 .container {
-  display: grid;
+  display: flex;
   place-items: center;
+  flex-direction: column;
 }
 
 .board-container {
